# C-C-problems-

./: README.md
C/: CMakeLists.txt  fudbal.c  lab.c  main.c  matrica.txt  text.txt  zad.c  zad1.c  zad10.c  zad11.c  zad11d.c  zad13d.c  zad14d.c  zad15d.c  zad17d.c  zad18d.c  zad1dop.c  zad2.c  zad2dop.c  zad4d.c  zad5d.c  zad6.c  zad6d.c  zad7.c  zad7d.c  zad8d.c
NewExercises-C++/: CMakeLists.txt
NewExercises-C++/Lab/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
NewExercises-C++/PrvKolokvium/: Cik-Cak.cpp  dvaParaBroj.cpp  heksadekadnoPogodok.cpp
NewExercises-C++/VtorKolokvium/: 14.c  15.c  16.cpp  17.cpp  18.cpp  19.c  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  29.cpp  2kolPrva.cpp  30.cpp
StrukturnoNovi/: CMakeLists.txt  Cik-Cak2.0.cpp  blagBroj.cpp  hiddenNumbers.cpp  interesenBroj.cpp  kvadratOdZnaci.cpp  maxDigitsOnPosition.cpp  minMaxAbs.cpp  parenEkvivalent.cpp  s.c  sumDigitsPlusMax.cpp  test.cpp  totalnoRazlicen.cpp
