cmake_minimum_required(VERSION 3.24)
project(StrukturnoNovi)

set(CMAKE_CXX_STANDARD 17)

add_executable(0 "PrvKolokvium/blagBroj.cpp")
add_executable(1 "PrvKolokvium/interesenBroj.cpp")
add_executable(2 "PrvKolokvium/hiddenNumbers.cpp")
add_executable(3 "PrvKolokvium/parenEkvivalent.cpp")
add_executable(4 "PrvKolokvium/kvadratOdZnaci.cpp")
add_executable(5 "PrvKolokvium/dvaParaBroj.cpp")
add_executable(6 "PrvKolokvium/totalnoRazlicen.cpp")
add_executable(7 "PrvKolokvium/heksadekadnoPogodok.cpp")
add_executable(8 "PrvKolokvium/Cik-Cak.cpp")
add_executable(9 "PrvKolokvium/Cik-Cak2.0.cpp")
add_executable(10 "PrvKolokvium/sumDigitsPlusMax.cpp")
add_executable(11 "PrvKolokvium/maxDigitsOnPosition.cpp")
add_executable(12 "PrvKolokvium/test.cpp")
add_executable(13 "PrvKolokvium/minMaxAbs.cpp")
add_executable(14 "VtorKolokvium/14.c")
add_executable(15 "VtorKolokvium/15.c")
add_executable(16 "VtorKolokvium/16.cpp")
add_executable(17 "VtorKolokvium/17.cpp")
add_executable(18 "VtorKolokvium/18.cpp")
add_executable(19 "VtorKolokvium/19.c")
add_executable(20 "VtorKolokvium/20.cpp")
add_executable(21 "VtorKolokvium/21.cpp")
add_executable(22 "VtorKolokvium/22.cpp")
add_executable(23 "VtorKolokvium/23.cpp")
add_executable(24 "VtorKolokvium/24.cpp")
add_executable(25 "VtorKolokvium/25.cpp")
add_executable(26 "VtorKolokvium/26.cpp")
add_executable(27 "VtorKolokvium/27.cpp")
add_executable(28 "VtorKolokvium/28.cpp")
add_executable(29 "VtorKolokvium/29.cpp")
add_executable(30 "VtorKolokvium/30.cpp")
add_executable(kolokviumska1 "VtorKolokvium/2kolPrva.cpp")
add_executable(lab1 "Lab/1.cpp")
add_executable(lab2 "Lab/2.cpp")
add_executable(lab3 "Lab/3.cpp")
add_executable(lab4 "Lab/4.cpp")
add_executable(lab5 "Lab/5.cpp")
add_executable(lab6 "Lab/6.cpp")