cmake_minimum_required(VERSION 3.24)
project(StrukturnoNovi)

set(CMAKE_CXX_STANDARD 17)

add_executable(0 blagBroj.cpp)
add_executable(1 interesenBroj.cpp)
add_executable(2 hiddenNumbers.cpp)
add_executable(3 parenEkvivalent.cpp)
add_executable(4 kvadratOdZnaci.cpp)
add_executable(5 dvaParaBroj.cpp)
add_executable(6 totalnoRazlicen.cpp)
add_executable(7 heksadekadnoPogodok.cpp)
add_executable(8 Cik-Cak.cpp)
add_executable(9 Cik-Cak2.0.cpp)
add_executable(10 sumDigitsPlusMax.cpp)
add_executable(11 maxDigitsOnPosition.cpp)
add_executable(12 test.cpp)
add_executable(13 s.c)
add_executable(14 minMaxAbs.cpp)